deployments/observability/victoria-metrics/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "grafana.talos-cluster.local.obleey.com"
  rules:
    - backendRefs:
        - name: victoria-metrics-grafana
          port: 80
